--- a/My First App/res/layout/activity_main.xml
+++ b/My First App/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal" >
-
+    
+     <!-- Blue Streak -->
     <TextView
         android:id="@+id/blue_streak"
         android:layout_width="wrap_content"
@@ -15,7 +16,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ToggleButton
-        android:id="@+id/b_streak"
+        android:id="@+id/blue_streak_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/blue_streak"
@@ -23,5 +24,53 @@
         android:layout_alignTop="@+id/blue_streak"
         android:textOff="No"
         android:textOn="Yes" />
+    
+    <!-- Calypso -->
+    <TextView
+        android:id="@+id/calypso"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/blue_streak"
+        android:layout_marginTop="14dp"
+        android:text="@string/calypso"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+    
+    <ToggleButton
+        android:id="@+id/calypso_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/calypso"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/calypso"
+        android:text="ToggleButton"
+        android:textOff="No"
+        android:textOn="Yes" />
+
+    
+     <!-- Cedar Mine Ride -->
+    <TextView
+        android:id="@+id/cedar_mine"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/calypso"
+        android:layout_marginTop="14dp"
+        android:text="@string/cedar_creek_mine"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <ToggleButton
+        android:id="@+id/cedar_mine_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/cedar_mine"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/cedar_mine"
+        android:text="ToggleButton"
+        android:textOff="No"
+        android:textOn="Yes" />
+    
+    
+    
 
 </RelativeLayout>
