--- a/Cedar App/res/layout/activity_listof_rides.xml
+++ b/Cedar App/res/layout/activity_listof_rides.xml
@@ -17,7 +17,6 @@
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentLeft="true"
 	        android:layout_alignParentTop="true"
-	        android:onClick="awesome"
 	        android:textColor="@color/white"
 	        android:text="@string/blue_streak"
 	        android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -27,7 +26,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:textColor="@color/white"
-	        android:onClick="ToggleRideStates"
+	        android:onClick="AddtoList"
 	        android:layout_alignParentRight="true"
 	        android:textOff="No"
 	        android:textOn="Yes" />
@@ -52,6 +51,7 @@
 	        android:textColor="@color/white"
 	        android:layout_below="@+id/blue_streak_button"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:layout_alignParentRight="true"
 	        android:textOff="No"
 	        android:textOn="Yes" />
@@ -78,6 +78,7 @@
 	        android:layout_below="@+id/calypso_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -105,6 +106,7 @@
 	        android:layout_below="@+id/cedar_mine_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -131,6 +133,7 @@
 	        android:layout_below="@+id/cedar_downs_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -157,6 +160,7 @@
 	        android:layout_below="@+id/corkscrew_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -183,6 +187,7 @@
 	        android:layout_below="@+id/dodgem_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -209,6 +214,7 @@
 	        android:layout_below="@+id/gemini_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -235,6 +241,7 @@
 	        android:layout_below="@+id/iron_dragon_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -261,6 +268,7 @@
 	        android:layout_below="@+id/junior_gemini_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -286,6 +294,7 @@
 	        android:layout_below="@+id/magnum_xl200_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -312,6 +321,7 @@
 	        android:layout_below="@+id/mantis_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -337,6 +347,7 @@
 	        android:layout_below="@+id/matterhorn_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -363,6 +374,7 @@
 	        android:layout_below="@+id/maverick_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -388,6 +400,7 @@
 	        android:layout_below="@+id/maxair_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -413,6 +426,7 @@
 	        android:layout_below="@+id/mean_streak_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -438,6 +452,7 @@
 	        android:layout_below="@+id/millenium_force_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -464,6 +479,7 @@
 	        android:layout_below="@+id/monster_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -489,6 +505,7 @@
 	        android:layout_below="@+id/ocean_motion_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	
@@ -515,6 +532,7 @@
 	        android:layout_below="@+id/power_tower_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />
 	    
@@ -540,6 +558,7 @@
 	        android:layout_below="@+id/raptor_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	    
 	        
@@ -565,6 +584,7 @@
 	        android:layout_below="@+id/scrambler_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	 
 	        
@@ -591,6 +611,7 @@
 	        android:layout_below="@+id/shoot_the_rapids_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	 
 	        
@@ -617,6 +638,7 @@
 	        android:layout_below="@+id/skyhawk_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	
 	    
@@ -643,6 +665,7 @@
 	        android:layout_below="@+id/snake_river_falls_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	 
 	        
@@ -669,6 +692,7 @@
 	        android:layout_below="@+id/super_himalaya_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	 
 	        
@@ -695,6 +719,7 @@
 	        android:layout_below="@+id/thunder_canyon_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	
 	        
@@ -720,6 +745,7 @@
 	        android:layout_below="@+id/top_thrill_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	
 	        
@@ -746,6 +772,7 @@
 	        android:layout_below="@+id/troika_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	
 	    
@@ -771,6 +798,7 @@
 	        android:layout_below="@+id/wave_swinger_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	
 	        
@@ -797,6 +825,7 @@
 	        android:layout_below="@+id/wicked_twister_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	
 	        
@@ -823,6 +852,7 @@
 	        android:layout_below="@+id/wind_seeker_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	
 	        
@@ -848,6 +878,7 @@
 	        android:layout_below="@+id/witches_wheel_button"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginTop="15dp"
+	        android:onClick="AddtoList"
 	        android:textOff="No"
 	        android:textOn="Yes" />	
 	        
